--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 VITE_APP_FIREBASE_API_KEY = AIzaSyAoIBlEezVocbNQhdbl7CysoBMKG4DcU7E
 
-VITE_APP_BASE_URL = https://task-manager-server-nine-sandy.vercel.app/
+VITE_APP_BASE_URL = https://task-manager-server-nine-sandy.vercel.app
