--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js",
+    "server": "nodemon index.js",
     "build": "npm install --prefix ./client && npm run build --prefix ./client && npm install"
   },
   "author": "",
