--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "server": "nodemon index.js",
-    "build": "npm install --prefix ./client && npm run build --prefix ./client && npm install"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
