--- a/server/client/package.json
+++ b/server/client/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
+    "server": "file:..",
     "sonner": "^1.5.0"
   },
   "devDependencies": {
